# Getraenkeautomat

./: .gitmodules  CMakeLists.txt  CWBoard.cpp  CWBoard.h  Card.cpp  Card.h  Logger.cpp  Logger.h  NXP.cpp  NXP.h  README.md  RFIDBoard.cpp  RFIDBoard.h  SerialDevice.cpp  SerialDevice.h  main.cpp  protocol.cpp  protocol.h
lib/: CMakeLists.txt
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
nxprdlib/comps/phOsal/src/: phOsal_GLib.c
nxprdlib/comps/phalTop/src/Sw/: phalTop_Sw.c
nxprdlib/comps/phbalReg/src/: phBalReg_RpiSpi.c
nxprdlib/types/: ph_TypeDefs.h
